Minimum implemented. Now there is no more the mood to do more

--- a/source/DotNetBay.WebApp/Views/Auctions/Index.cshtml
+++ b/source/DotNetBay.WebApp/Views/Auctions/Index.cshtml
@@ -82,7 +82,7 @@
         <td>
             @if (item.IsRunning)
             {
-                @Html.ActionLink("Bieten", "Bid", new { id = item.Id });
+                @Html.ActionLink("Bieten", "Create", "Bids", new {id = item.Id },null);
             }
             @Html.ActionLink("Details", "Details", new {id = item.Id})
         </td>
