--- a/source/DotNetBay.WebApp/Views/Shared/_Layout.cshtml
+++ b/source/DotNetBay.WebApp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <!-- script src="~/Scripts/jquery.validate.unobtrusive.min.js"></!--script -->
     @if (IsSectionDefined("AddToHead"))
     {
         @RenderSection("AddToHead", required: false)
